resolve the overlappint between navbar and content

--- a/ReactDemo1/ClientApp/src/components/Layout.css
+++ b/ReactDemo1/ClientApp/src/components/Layout.css
@@ -6,4 +6,7 @@
     bottom: 0px;
     left: 1%;
 }
+.ui#content {
+        padding-top: 55px;
+}
 
